[package]
name = "qqbot-sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_repr = "0.1.9"
serde_with = "3"
hyper = "0.14.20"
http = "0.2.8"
env_logger = "0.10.0"
log = "0.4.17"

[dependencies.serde]
version = "1.0.145"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.86"

[dependencies.chrono]
version = "0.4.26"
features = ["serde"]

[dependencies.reqwest]
version = "0.11.12"
features = ["json"]

[dependencies.tungstenite]
version = "0.18"

[dependencies.tokio-tungstenite]
version = "0.18"
features = ["native-tls"]

[dependencies.futures-util]
version = "0.3.24"

[dependencies.tokio]
version = "1.21.2"
features = ["rt", "macros", "rt-multi-thread", "signal"]

[dependencies.actix]
version = "0.13.0"

[dependencies.awc]
version = "3.1.1"

[dependencies.async-trait]
version = "0.1.68"

[dependencies-dev.tokio]
version = "1.21.2"
features = ["rt", "macros", "rt-multi-thread", "signal"]
