[package]
name = "qqbot-sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_repr = "0.1.12"
serde_with = "3"
hyper = "0.14.26"
http = "0.2.9"
env_logger = "0.10.0"
log = "0.4.18"

[dependencies.serde]
version = "1.0.163"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.96"

[dependencies.chrono]
version = "0.4.26"
features = ["serde"]

[dependencies.reqwest]
version = "0.11.12"
features = ["json"]

[dependencies.tokio-tungstenite]
version = "0.21.0"
features = ["native-tls"]

[dependencies.futures-util]
version = "0.3.28"

[dependencies.tokio]
version = "1.28.2"
features = ["rt", "macros", "rt-multi-thread", "signal"]

[dependencies.async-trait]
version = "0.1.68"

[dependencies-dev.tokio]
version = "1.28.2"
features = ["rt", "macros", "rt-multi-thread", "signal"]
