[package]
name = "qqbot-sdk"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_repr = "0.1.12"
serde_with = "3"
hyper = "1.6"
http = "1.2"
ed25519-dalek = "2.1"
# base64 = "0.22"
hex = "0.4"


tokio-util = { version = "0.7" }

# headers = "0.4.0"
[dependencies.axum-extra]
# features = ["typed-header"]
version = "0.10"
[dependencies.tracing]
version = "0.1"

[dependencies.serde]
version = "1"
features = ["derive", "rc"]

[dependencies.serde_json]
version = "1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.futures-util]
version = "0.3.28"

[dependencies.tokio]
version = "1"
features = ["rt", "macros", "rt-multi-thread", "signal"]

[dependencies.async-trait]
version = "0.1.68"

[dependencies.axum]
version = "0.8"
features = []



[dependencies-dev.tokio]
version = "1"
features = ["rt", "macros", "rt-multi-thread", "signal"]
